--- a/package.json
+++ b/package.json
@@ -15,43 +15,44 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.0",
-    "zod": "^3.22.4",
     "@hookform/resolvers": "^3.3.4",
-    "framer-motion": "^10.18.0",
-    "react-icons": "^5.0.1",
-    "lucide-react": "^0.314.0",
     "@prisma/client": "^5.8.1",
-    "next-auth": "^4.24.5",
-    "bcryptjs": "^2.4.3",
-    "@tiptap/react": "^2.1.13",
-    "@tiptap/starter-kit": "^2.1.13",
+    "@supabase/supabase-js": "^2.95.3",
     "@tiptap/extension-image": "^2.1.13",
     "@tiptap/extension-link": "^2.1.13",
     "@tiptap/extension-placeholder": "^2.1.13",
-    "react-dropzone": "^14.2.3",
-    "date-fns": "^3.2.0",
-    "recharts": "^2.10.3",
+    "@tiptap/react": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
+    "date-fns": "^3.2.0",
+    "framer-motion": "^10.18.0",
+    "lucide-react": "^0.314.0",
+    "next": "^14.1.0",
+    "next-auth": "^4.24.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.49.0",
+    "react-icons": "^5.0.1",
+    "recharts": "^2.10.3",
+    "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.0",
-    "sharp": "^0.33.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "@types/bcryptjs": "^2.4.6",
-    "typescript": "^5.3.3",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.33",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
+    "postcss": "^8.4.33",
     "prisma": "^5.8.1",
-    "tsx": "^4.7.0"
+    "tailwindcss": "^3.4.1",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
