--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.0.1",
     "recharts": "^2.10.3",
     "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.0",
+    "uuid": "^13.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
